# cgw

./: CMakeLists.txt  README.md
src/: IModule.h  ModuleRegistry.cpp  ModuleRegistry.h  main.cpp
src/modules/: CubeModule.cpp  CubeModule.h  PendulumModule.cpp  PendulumModule.h
src/utils/: Random.cpp  Random.h
